--- a/src/components/WireSelector/WireSelector.scss
+++ b/src/components/WireSelector/WireSelector.scss
@@ -2,17 +2,17 @@
 .wire-selector {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 2rem;
   // border: 1px solid red;
   &__card {
     // border: 1px solid blue;
-    width: 9rem;
-    height: 9rem;
+    width: 8rem;
+    height: 8rem;
 
     & > button {
       height: 100%;
       width: 100%;
       border: none;
-      border-radius: 10px;
       background-color: $off-white;
       color: $dark-green;
 
@@ -23,6 +23,7 @@
 
     &.active {
       & > button {
+        z-index: 1;
         background-color: $light-orange;
         color: $off-white;
 
