--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -40,4 +40,30 @@ a.link-no-style {
       text-align: center;
     }
   }
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    &-emph, & > p {
+      font-size: 1rem;
+      font-weight: 200;
+      margin: 0;
+    }
+    &-emph {
+      font-weight: 400;
+    }
+  }
+
+  &__link-container {
+    font-weight: 200;
+      font-size: 0.8rem;
+    &--link {
+      color: $off-white;
+      &:hover {
+        color: $light-orange;
+      }
+    }
+  }
 }
