--- a/src/components/MaskSection/MaskSection.scss
+++ b/src/components/MaskSection/MaskSection.scss
@@ -3,9 +3,12 @@
   background-color: $off-white;
   margin: 0 auto;
   width: 85%;
+  // border: 5px solid yellow;
 
   &__humaans {
     transform: translateY(-15%);
+    max-height: 550px;
+    max-width: 550px;
   }
 
   &__header {
@@ -25,5 +28,22 @@
     background-color: $dark-green;
     margin-left: 5px;
     margin-bottom: 1rem;
+  }
+}
+
+@media only screen and (min-width: 650px) {
+  .mask-section {
+    position: relative;
+    padding-top: 2rem;
+    max-width: 950px;
+    &__humaans {
+      position: absolute;
+      top: -100px; 
+      right: 30px;
+      height: 30%;
+      width: 30%;
+      min-height: 550px;
+      min-width: 550px;
+    }
   }
 }
