--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -3,14 +3,21 @@
   position: relative;
   background-color: $light-green;
   color: $off-white;
-  padding: 1rem;
+  padding: 1.5rem 1rem;
   font-weight: 200;
   opacity: 1; 
   transition: 3000ms ease-in opacity;
-
+  max-width: 960px;
+  margin: 0 auto;
+  
   &.empty {
     display: none;
     opacity: 0;
+  }
+  
+  &__container {
+    width: 100%;
+    background-color: $light-green;
   }
 
   &__summary {
@@ -71,8 +78,8 @@
       background-color: rgba(red, 0.7);
       color: $off-white;
       border-radius: 50px;
-      width: 1rem;
-      height: 1rem;
+      width: 1.5rem;
+      height: 1.5rem;
       display: flex;
       align-items: center;
       justify-content: center;
