--- a/src/components/navBar.scss
+++ b/src/components/navBar.scss
@@ -1,30 +1,4 @@
 @import '../../src/styles/variables';
-// .nav-btn-custom {
-//   background-color: #fefae0;
-//   font-weight: 600;
-//   color: #283618;
-//   align-self: center;
-//   height: 35px;
-//   border: none;
-//   border-radius: 5px;
-//   padding: 0 1rem;
-//   &:hover {
-//     opacity: 0.9;
-//   }
-// }
-// @media only screen and (max-width: 600px) {
-//   .nav-btn-custom {
-//     color: rgba(255, 255, 255, 0.5);
-//     background: none;
-//     font-weight: 300;
-//     margin-right: auto;
-//     padding-left: 0;
-//     &:focus {
-//       outline: none;
-//       color:  rgba(255, 255, 255, 0.75);
-//     }
-//   }
-// }
 
 .navbar {
   &__brand-text {
@@ -32,6 +6,18 @@
     font-weight: 100;
     &--emph {
       font-weight: 400;
+    }
+  }
+}
+
+@media only screen and (min-width: 991px) {
+  #buy-button {
+    color: $off-white;
+    border: 1px solid $off-white;
+    transition: background-color 200ms ease-in, color 200ms ease-in;
+    &:hover {
+      background-color: $off-white; 
+      color: $dark-green;
     }
   }
 }
