--- a/src/components/Hero/hero.scss
+++ b/src/components/Hero/hero.scss
@@ -4,9 +4,15 @@
   &__container {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    flex: 0 auto; 
+    align-items: center;
+    align-content: center;
     background: $off-white;
-
+    
     &--lg {
+      width: 100%;
+      max-width: 1425px;
       display: grid; 
       grid-template-rows: 2fr;
       grid-template-columns: 1fr;
