small tweak to the success page

--- a/src/styles/success.scss
+++ b/src/styles/success.scss
@@ -1,13 +1,22 @@
-@import '../../src/styles/variables';
+@import "../../src/styles/variables";
 .success {
   height: 100%;
   width: 100%;
-  &__msg {
-  margin: 3rem;
-  & > p {
-    font-size: 1.2rem;
-    font-weight: 200;
-    text-align: center;
+  margin: 0 auto;
+  &__img-container {
+    width: 100%;
+    background-color: #BEC3AD; 
   }
+  &__img {
+    max-width: 730px;
+    margin: 0 auto;
+  }
+  &__msg {
+    margin: 3rem;
+    & > p {
+      font-size: 1.2rem;
+      font-weight: 200;
+      text-align: center;
+    }
   }
 }
