fixed API for handling wired masks

--- a/src/components/Hero/hero.scss
+++ b/src/components/Hero/hero.scss
@@ -65,7 +65,7 @@
 
   &__wave {
     margin-top: auto;
-    width: 100vw !important;
+    width: 100% !important;
   }
 }
 
@@ -137,7 +137,7 @@
     &__wave {
       position: absolute;
       bottom: 0;
-      width: 100vw !important;
+      width: 100% !important;
     }
   }
 }
@@ -203,7 +203,7 @@
     &__wave {
       position: absolute;
       bottom: 0;
-      width: 100vw !important;
+      width: 100% !important;
     }
   }
 }
