Added insta component

--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -9,6 +9,7 @@
   transition: 3000ms ease-in opacity;
   max-width: 960px;
   margin: 0 auto;
+  padding-bottom: 4rem;
   
   &.empty {
     display: none;
