--- a/src/components/Instagram/Instagram.scss
+++ b/src/components/Instagram/Instagram.scss
@@ -25,9 +25,12 @@
   }
   &__img {
     position: relative;
-    max-width: 400px;
+    width: 100%;
+    height: 0;
+    padding-bottom: 100%;
     transform: scale(1);
     transition: transform 170ms linear;
+    overflow: hidden;
     &:hover,&:focus {
       .instagram__icon-fill {
         opacity: 1;
