--- a/src/components/Hero/hero.scss
+++ b/src/components/Hero/hero.scss
@@ -13,6 +13,7 @@
     &--lg {
       width: 100%;
       max-width: 1425px;
+      margin: 0 auto;
       display: grid; 
       grid-template-rows: 2fr;
       grid-template-columns: 1fr;
